deployment/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
spec:
  rules:
  - host: s3-console.dev.local
    http:
      paths:
      - backend:
          service:
            name: s3
            port:
              number: 9001
        path: /
        pathType: Prefix

  - host: spark-hs.dev.local
    http:
      paths:
      - backend:
          service:
            name: sparkhs
            port:
              number: 18080
        path: /
        pathType: Prefix

  - host: airflow.dev.local
    http:
      paths:
      - backend:
          service:
            name: airflow
            port:
              number: 8080
        path: /
        pathType: Prefix
#    - host: argocd.dev.local
#      http:
#        paths:
#          - backend:
#              service:
#                name: argocd
#                port:
#                  number: 8080
#            path: /
#            pathType: Prefix
